# CommandsService

./: .gitignore  README.md
CommandsService/: CMakeLists.txt  ClientException.h  ClientPackage.cpp  ClientPackage.h  Command.h  DataProcessor.cpp  DataProcessor.h  ICommandHandler.h  IDataProcessor.h  IHandlerFactory.h  IServer.h  PackagesQueue.cpp  PackagesQueue.h  ServerApplication.cpp  ServerApplication.h  ServerConnection.h  TcpServer.cpp  TcpServer.h  Utils.cpp  Utils.h  main.cpp
CommandsService/Handlers/: CatHandler.cpp  CatHandler.h  CommandsHandlerFactory.cpp  CommandsHandlerFactory.h  ICommandHandler.h  IHandlerFactory.h  PingHandler.cpp  PingHandler.h  SumHandler.cpp  SumHandler.h  UnsupportedCommandHandler.cpp  UnsupportedCommandHandler.h
CommandsService/Handlers/DataReaders/: DataReader.cpp  DataReader.h  IDataReader.h
CommandsService/TestsCommandsService/: CMakeLists.txt
CommandsService/TestsCommandsService/tests/: CatHandlerTest.cpp  PingHandlerTest.cpp  SumHandlerTest.cpp
